feat: randomBox draw api